fix: resource leaks and deprecated API usage in aura-mcp
- McpPackager: close openStream() with try-with-resources
- McpBridge.loadSchema(): close getInputStream() properly
- McpBridge.callHttp(): close getOutputStream() properly
- Replace deprecated new URL() with URI.create().toURL()
- Add @SuppressWarnings for unavoidable raw type cast in AuraMcpStarter